# TP_linux_embarque_HIMED_BENJEMAA

./: Led .txt  README.md  chenillard.txt
telecran/: .gitignore  dpram.vhd  encoder_manager.vhd  hdmi_controler.vhd  telecran.qpf  telecran.qsf  telecran.vhd
telecran/pll/: pll.bsf  pll.qip  pll.v  pll_reconfig.bsf  pll_reconfig.qip  pll_reconfig.sip  pll_reconfig.v  sys_pll.bsf  sys_pll.qip  sys_pll.sip  sys_pll.v
telecran/pll/pll/: pll_0002.v
telecran/pll/pll_reconfig/: altera_pll_reconfig_top.v
telecran/pll/pll_reconfig_sim/: pll_reconfig.v
telecran/pll/pll_sim/: pll.vo
telecran/pll/sys_pll_sim/: sys_pll.vo
tp_nios_v/rtl/: tp_nios_v.vhd  tp_nios_v.vhd.bak
tp_nios_v/soft/.metadata/: version.ini
tp_nios_v/soft/app/: .cproject  CMakeLists.txt  main.c
tp_nios_v/soft/app/.metadata/: version.ini
tp_nios_v/soft/app/.metadata/.plugins/org.eclipse.cdt.core/: bsp.1768222106494.pdom
tp_nios_v/soft/app/.metadata/.plugins/org.eclipse.core.resources/.projects/bsp/: .location  .markers
tp_nios_v/soft/app/.metadata/.plugins/org.eclipse.core.resources/.projects/bsp/.indexes/: properties.index
tp_nios_v/soft/app/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
tp_nios_v/soft/app/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
tp_nios_v/soft/app/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
tp_nios_v/soft/app/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
tp_nios_v/soft/bsp/: .cproject  CMakeLists.txt  alt_sys_init.c  linker.h  linker.x  memory.gdb  settings.bsp  summary.html  system.h  toolchain.cmake
tp_nios_v/sopc/: nios.qsys  nios.sopcinfo
tp_nios_v/sopc/.qsys_edit/: nios.xml  nios_schematic.nlv  preferences.xml
tp_nios_v/sopc/nios/: nios.bsf  nios.cmp  nios.html  nios.xml  nios_bb.v  nios_inst.v  (+4 more)
tp_nios_v/synt/: tp_nios_v.qpf  tp_nios_v.qsf
(+312 files in other folders)
